# quote_yulsoft

./: Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  quotes.py  templates.py  users.py
app/core/: config.py  exceptions.py
app/db/: init_db.py  session.py
app/models/: __init__.py  quote.py  user.py
app/schemas/: __init__.py  quote.py
app/services/: calculation.py  pdf_generator.py
app/templates/quote/: base.html
app/templates/quote/partials/: customer.html  header.html  items.html  payment.html  signature.html  totals.html
app/templates/quote/static/css/: design-classic.css  design-color.css  design-modern.css  design_classic.css  design_color.css  design_modern.css  quote-base.css
scripts/: init-db.sql
